--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -89,7 +89,7 @@
 
     header .nav #menu-fale-conosco{
         display: block;
-        /* height: 2rem; */
+      
         width: 100%;
        
     }
@@ -99,8 +99,8 @@
         margin-top: 2rem;
         display: flex;
         
-        font-size: 1.8rem;
-      
+        font-size: 2rem;
+        font-family: var(--font-titulo);
         background: none;
         cursor: pointer;
         gap: 1rem
@@ -144,9 +144,7 @@
         height: 0px;
         top: 9.1rem;
         left: 0px;
-        background-color: silver;
-        /* padding-bottom: 1.5rem; */
-        /* display: block; */
+        background-color: rgb(248, 248, 248);
         z-index: 1000;
         transition: .6s;
         visibility: hidden;
@@ -177,7 +175,19 @@
         background-repeat: no-repeat;
         background-size: contain;
     }
+
+    footer .column-footer:nth-child(1){
+        display: none;
+    }
+
+
+    footer{
+        grid-template-columns: repeat(2, 1fr);
+    }
     
+    .blog{
+        padding-left: 2rem;
+    }
 }
 
 @media (max-width: 670px){
@@ -203,6 +213,33 @@
 
 }
 
+@media(max-width:525px){
+    .swiper{
+        height: 35rem;
+    }
+   
+
+    .swiper .swiper-wrapper .swiper-slide .description-slide{
+        width: 100.5%;
+        height: 180px;
+        margin-top: -180px;
+    }
+    .swiper .swiper-wrapper .swiper-slide .description-slide p{
+        font-size: 1.6rem;
+    }
+}
+
+@media(max-width:475px){
+    .swiper .swiper-wrapper .swiper-slide .description-slide{
+        margin-top: -150px;
+    }
+}
+
+@media(max-width:440px){
+    .swiper .swiper-wrapper .swiper-slide .description-slide{
+        margin-top: -120px;
+    }
+}
 @media (max-width: 400px){
     
     .conteudo-inicial{
@@ -212,7 +249,7 @@
         padding-bottom: 2.5rem;
         vertical-align: middle;
         height: 680px;
-        padding-left: 0rem;
+        padding-left: 1rem;
         padding-right: 0rem;
     }
     .conteudo-inicial .titulo-h1{
@@ -229,12 +266,32 @@
         line-height: 3rem;
     }
 
+    
+
     .conteudo-inicial .botoes-banner-inicio button{
         display: grid;
         margin-top: 2rem;
-        width: 100%;
-        height: 6.5rem;
+        padding: 2rem;
+        width: 97%;
         align-items: center;
+       
+    }
+
+    .conteudo-inicial .slide-from-left:hover{
+        color: var(--white);
+    }
+
+    .conteudo-inicial .slide-from-left::after{
+        background: #000000;
+    }
+
+    .conteudo-inicial .slide-from-right:hover{
+        color: var(--black);
+
+    }
+    
+    .conteudo-inicial .botoes-banner-inicio .slide-from-right::after{
+        background: #ffffff;
     }
     .conteudo-inicial .botoes-banner-inicio .slide-from-right{
         margin-left: 0rem;
@@ -300,5 +357,9 @@
     
         margin-top: 2rem;
       
+    }
+
+    .swiper .swiper-wrapper .swiper-slide .description-slide{
+        margin-top: -120px;
     }
 }
